Video Parte 2, recriando a pagina inicial do Instagram Término da estrutura do HTML no index.html Inicio de código no style.css

--- a/index.html
+++ b/index.html
@@ -20,6 +20,21 @@
                 <a href="#" class="Instagram-login">Continue como spruce gabriela</a>
                 <a href="#" class="Instagram-logout">Remover contato</a>
             </div>
+            <div class="group">
+                <p class="not-account">Não é spruce gabriela </p>
+                <p class="not-account">
+                    <span class="link-blue">Alterar contas</span>
+                    ou 
+                    <span class="link-blue">Inscreva-se</span>
+                </p>
+            </div>
+            <div class="get-the-app">
+                <p class="get-app">Baixe o Aplicatiovo</p>
+                <div class="download">
+                    <a href="#" class="app-download"></a>
+                    <a href="#" class="app-download"></a>
+                </div>
+            </div>
         </div>
     </div>
 </body>
