--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@
                 <div class="profile-photo">
                     <img src="./img/perfil-instagram.jpg" alt="foto do perfil">
                 </div>
-                <a href="#" class="Instagram-login">Continue como spruce gabriela</a>
-                <a href="#" class="Instagram-logout">Remover contato</a>
+                <a href="#" class="instagram-login">Continue como sprucegabriela</a>
+                <a href="#" class="instagram-logout">Remover contato</a>
             </div>
             <div class="group">
-                <p class="not-account">Não é spruce gabriela </p>
+                <p class="not-account">Não é sprucegabriela? </p>
                 <p class="not-account">
-                    <span class="link-blue">Alterar contas</span>
+                    <span class="link-blue"><a href="#">Alterar contas</a></span></a>
                     ou 
-                    <span class="link-blue">Inscreva-se</span>
+                    <span class="link-blue"><a href="#">Inscreva-se</a></span>
                 </p>
             </div>
             <div class="get-the-app">
-                <p class="get-app">Baixe o Aplicatiovo</p>
+                <p class="get-app">Baixe o Aplicativo</p>
                 <div class="download">
                     <a href="#" class="app-download"></a>
                     <a href="#" class="app-download"></a>
